--- a/datamine/localization/text_ui_Endgame.xml
+++ b/datamine/localization/text_ui_Endgame.xml
@@ -226,7 +226,7 @@
   <Names>
    <NamedRange ss:Name="Print_Area" ss:RefersTo="=Sheet1!R1C2:R1C2"/>
   </Names>
-  <Table ss:ExpandedColumnCount="3" ss:ExpandedRowCount="831" x:FullColumns="1"
+  <Table ss:ExpandedColumnCount="3" ss:ExpandedRowCount="832" x:FullColumns="1"
    x:FullRows="1" ss:DefaultColumnWidth="60" ss:DefaultRowHeight="13.3125">
    <Column ss:Width="336.75"/>
    <Column ss:AutoFitWidth="0" ss:Width="441.75"/>
@@ -275,6 +275,10 @@
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s73"><Data ss:Type="String">ui_citybuilding_cannot_start_incompatible_item</Data></Cell>
     <Cell ss:StyleID="s26"><Data ss:Type="String">Cannot start project: chosen item is incompatible</Data></Cell>
+   </Row>
+   <Row ss:AutoFitHeight="0" ss:Height="15">
+    <Cell ss:StyleID="s73"><Data ss:Type="String">ui_citybuilding_cannot_start_stacked_items_are_forbidden</Data></Cell>
+    <Cell ss:StyleID="s26"><Data ss:Type="String">Cannot start project: stacked items are incompatible</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s73"><Data ss:Type="String">ui_citybuilding_choose_rewards</Data></Cell>
@@ -3262,7 +3266,8 @@
    <Panes>
     <Pane>
      <Number>3</Number>
-     <ActiveCol>2</ActiveCol>
+     <ActiveRow>16</ActiveRow>
+     <ActiveCol>1</ActiveCol>
     </Pane>
    </Panes>
    <ProtectObjects>False</ProtectObjects>
