--- a/datamine/localization/text_ui_passiveskills.xml
+++ b/datamine/localization/text_ui_passiveskills.xml
@@ -680,7 +680,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_TANK_7_desc</Data></Cell>
-    <Cell ss:StyleID="s76"><Data ss:Type="String">Each point of Physical Resistance increases Damage dealt by all Damage Types, but decreases your Critical Chance Score.</Data></Cell>
+    <Cell ss:StyleID="s76"><Data ss:Type="String">Each point of Physical Resistance increases the Damage you deal with all Damage Types, but decreases your Critical Chance Score.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_TANK_8_name</Data></Cell>
@@ -1044,7 +1044,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_MELEE_24_desc</Data></Cell>
-    <Cell ss:StyleID="s76"><Data ss:Type="String">Dash Attacks have an increased Chance t be Critical Hits.</Data></Cell>
+    <Cell ss:StyleID="s76"><Data ss:Type="String">Dash Attacks have an increased Chance to be Critical Hits.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_MELEE_25_name</Data></Cell>
@@ -1396,7 +1396,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ELEM_5_desc</Data></Cell>
-    <Cell ss:StyleID="s76"><Data ss:Type="String">When inflicting Ailments, the number of Stacks inflicted on an Enemy is increased. Damage dealt from sources other than those that deal damage-over-time is decreased.</Data></Cell>
+    <Cell ss:StyleID="s76"><Data ss:Type="String">When inflicting Ailments, the number of Stacks inflicted on an Enemy is increased. The Damage you deal from sources other than those that deal damage-over-time is decreased.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ELEM_6_name</Data></Cell>
@@ -2604,7 +2604,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s85"><Data ss:Type="String">ui_NECRO_8_gameplaydesc</Data></Cell>
-    <Cell ss:StyleID="s87"><Data ss:Type="String">Enemies that die near you have a chance to drop a gGeen Globe. If picked up, the Globe will increase your Toxic damage for a short duration. This Buff Stacks with each Globe picked up.</Data></Cell>
+    <Cell ss:StyleID="s87"><Data ss:Type="String">Enemies that die near you have a chance to drop a Green Globe. If picked up, the Globe will increase your Toxic damage for a short duration. This Buff Stacks with each Globe picked up.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s83"><Data ss:Type="String">ui_NECRO_9_name</Data></Cell>
@@ -3004,7 +3004,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s85"><Data ss:Type="String">ui_ASSA_19_gameplaydesc</Data></Cell>
-    <Cell ss:StyleID="s84"><Data ss:Type="String">You have &quot;Power Charge&quot; points. This resource is now used to activate any Device Skills or Skills that deal the Lightning Damage Type. The resource can have any value between -100 and 100. When Power Charge is a positive number, your Damage will be increased, and when it is a negative number, your Damage will be decreased.\n\nPower Charge is regenerated over time, and by using your Basic Attacks.\n\nThese Skills still use Willpower in addition to Power Charge.</Data></Cell>
+    <Cell ss:StyleID="s84"><Data ss:Type="String">You have &quot;Power Charge&quot; points. This resource is now used to activate any Device Skills or Skills that deal the Lightning Damage Type. The resource can have any value between -100 and 100. When Power Charge is a positive number, your Damage will be increased, and when it is a negative number, your Damage will be decreased.\n\nPower Charge is regenerated over time, and by using your Basic Attacks.\n\nThese Skills still consume their dedicated Resource in addition to "Power Charge".</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s85"><Data ss:Type="String">ui_ASSA_20_name</Data></Cell>
@@ -3212,10 +3212,12 @@
    </Print>
    <Zoom>85</Zoom>
    <Selected/>
+   <TopRowVisible>538</TopRowVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
-     <ActiveCol>2</ActiveCol>
+     <ActiveRow>583</ActiveRow>
+     <ActiveCol>1</ActiveCol>
     </Pane>
    </Panes>
    <ProtectObjects>False</ProtectObjects>
